fix(markup): marker pair and global settings editors not displaying, rotate video doesn't fit video into view properly, settings editors invisible in non-theatre view mode

--- a/src/markup/ui/shortcuts-table/shortcuts-table.css
+++ b/src/markup/ui/shortcuts-table/shortcuts-table.css
@@ -11,6 +11,7 @@
 
 #shortcutsTableContainer {
   text-align: center;
+  position: relative;
 }
 
 #shortcutsTableContainer table {
